# rust-embedded-discover-microbit-book

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
03-setup/: Cargo.toml
03-setup/src/: main.rs
05-led-roulette/: Cargo.toml  Embed.toml
05-led-roulette/src/: main.rs
07-uart/: Cargo.toml
07-uart/src/: main.rs
08-i2c/: Cargo.toml
08-i2c/src/: main.rs
